--- a/src/main/resources/templates/AddPet.html
+++ b/src/main/resources/templates/AddPet.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Add Pet</title>
 </head>
 <body>
+<main>
+    <h1>ADD YOUR PET BELOW!</h1>
+    <form method="post"
+    th:action="">
+
+    </form>
+</main>
 
 </body>
 </html>
