--- a/src/main/resources/templates/ConfirmInsert.html
+++ b/src/main/resources/templates/ConfirmInsert.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Confirm Insert</title>
 </head>
 <body>
+<main>
+    <h1>Confirm Insert</h1>
+    <h2>Entered Data:</h2>
+    <div th:object="${pet}">
+        <p>
+            <label class="group_label">Pet Name:</label>
+            <span class="output" th:text="*{petName}">Coco</span>
+        </p>
+        <p>
+            <label class="group_label">Pet Gender:</label>
+            <span class="output" th:text="*{petGender}">Female</span>
+        </p>
+        <p>
+            <label class="group_label">Pet Type:</label>
+            <span class="output" th:text="*{petType}">Dog</span>
+        </p>
+        <p>
+            <label class="group_label">Pet Vaccination:</label>
+            <span class="output" th:text="*{petVaccinated}">yes</span>
+        </p>
+    </div>
+    <p><a href="Index.html" th:href="@{../Index}">Index</a></p>
+    <p><a href="AddStudent.html" th:href="@{../AddPet}">Add Pet</a></p>
+    <p><a href="ListStudents.html" th:href="@{../ListPet}">List Pet</a></p>
+</main>
 
 </body>
 </html>
