Fixed Links to used html pages

--- a/src/main/resources/templates/AddPet.html
+++ b/src/main/resources/templates/AddPet.html
@@ -56,7 +56,7 @@
         </p>
     </form>
     <p><a href="Index.html" th:href="@{Index}">Index</a></p>
-    <p><a href="ListStudents.html" th:href="@{ListPet}">List Pet</a></p>
+    <p><a href="ListPet.html" th:href="@{ListPet}">List Pet</a></p>
 </main>
 
 </body>
