--- a/src/main/resources/templates/ConfirmInsert.html
+++ b/src/main/resources/templates/ConfirmInsert.html
@@ -27,8 +27,8 @@
         </p>
     </div>
     <p><a href="Index.html" th:href="@{../Index}">Index</a></p>
-    <p><a href="AddStudent.html" th:href="@{../AddPet}">Add Pet</a></p>
-    <p><a href="ListStudents.html" th:href="@{../ListPet}">List Pet</a></p>
+    <p><a href="AddPet.html" th:href="@{../AddPet}">Add Pet</a></p>
+    <p><a href="ListPet.html" th:href="@{../ListPet}">List Pet</a></p>
 </main>
 
 </body>
