--- a/src/main/resources/templates/DeletePet.html
+++ b/src/main/resources/templates/DeletePet.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Delete Pet</title>
 </head>
 <body>
+<main>
+    <h1>Delete Record</h1>
+    <p class="message">Do you really want to remove this record?</p>
+    <h2>Record Data:</h2>
+    <div th:object="${pet}">
+        <p>
+            <label class="group_label">Pet Name:</label>
+            <span class="output" th:text="*{petName}">Coco</span>
+        </p>
+        <p>
+            <label class="group_label">Pet Gender:</label>
+            <span class="output" th:text="*{petGender}">Female</span>
+        </p>
+        <p>
+            <label class="group_label">Pet Type:</label>
+            <span class="output" th:text="*{petType}">Dog</span>
+        </p>
+        <p>
+            <label class="group_label">Pet Vaccination:</label>
+            <span class="output" th:text="*{petVaccinated}">yes</span>
+        </p>
+    </div>
+    <form method="post"
+          th:action="@{RemovePet}" action="ListPet.html">
+        <input type="hidden" name="id" th:value="${pet.id}">
+        <input type="submit" value="Remove Record">
+    </form>
+    <p><a href="Index.html" th:href="@{Index}">Index</a></p>
+    <p><a href="AddPet.html" th:href="@{AddPet}">Add Pet</a></p>
+    <p><a href="ListPet.html" th:href="@{ListPet}">List Pets</a></p>
+</main>
 
 </body>
 </html>
