--- a/src/main/resources/templates/ListPet.html
+++ b/src/main/resources/templates/ListPet.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>List All</title>
 </head>
 <body>
+<main>
+    <h1>List All</h1>
+    <table th:unless="${#lists.isEmpty(pet)}">
+        <tr>
+            <th>Count</th>
+            <th>Pet Name</th>
+            <th>Options</th>
+        </tr>
+        <tr th:each="p,c: ${pet}">
+            <td th:text="${c.count}">1</td>
 
+            <td th:text="${p.petName}">Coco</td>
+            <td>
+                <a href="PetDetails.html" th:href="@{PetDetails/{id}(id=${p.id})}">Details</a>
+                &nbsp;|&nbsp;
+                <a href="EditPet.html" th:href="@{EditPet(id=${p.id})}">Edit</a>
+                &nbsp;|&nbsp;
+                <a href="DeletePet.html" th:href="@{DeletePett(id=${p.id})}">Delete</a>
+            </td>
+        </tr>
+        <!--/*-->
+        <tr>
+            <td>2</td>
+            <td>Lisa</td>
+            <td>
+                <a href="PetDetails.html">Details</a>
+                &nbsp;|&nbsp;
+                <a href="EditPet.html">Edit</a>
+                &nbsp;|&nbsp;
+                <a href="DeletePet.html">Delete</a>
+            </td>
+        </tr>
+        <!--*/-->
+    </table>
+    <p class="message" th:if="${#lists.isEmpty(pet)}">No pet data</p>
+    <p><a href="Index.html" th:href="@{Index}">Index</a></p>
+    <p><a href="AddPet.html" th:href="@{AddPet}">Add Pet</a></p>
+    <p><a href="ListPet.html" th:href="@{DeleteAll}">DeleteAll</a></p>
+</main>
 </body>
 </html>
